# vita-sdl2-test

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmake_install.cmake  ftpupload.sh
src/: game-module.cpp  game-module.h  main.c  main.cpp
src/core/game/: game-module.cpp  game-module.h
